freshed-rs-macros/tests/ui_stream/fail/html_async_ctx_missing_context.rs
use freshed_rs_macros::html_async_ctx;

fn main() {
    let mut out = String::new();
    let _ = html_async_ctx!(&mut out, <div>oops</div>);
}
