freshed-rs-macros/tests/ui_stream/fail/html_async_ctx_missing_context.stderr
error: html_async_ctx! expects input in the form: writer_expr, context_expr, <markup...>
 --> tests/ui_stream/fail/html_async_ctx_missing_context.rs:5:13
  |
5 |     let _ = html_async_ctx!(&mut out, <div>oops</div>);
  |             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the macro `html_async_ctx` (in Nightly builds, run with -Z macro-backtrace for more info)
